Revert "fix(form-field): add web-appearance: none, to make box-shadow on formfield work on iOS"
This reverts commit e8ad1507

--- a/src/kirby/components/form-field/_form-field-inputs.shared.scss
+++ b/src/kirby/components/form-field/_form-field-inputs.shared.scss
@@ -19,7 +19,6 @@
   outline: none;
   padding: size('s');
   width: 100%;
-  -webkit-appearance: none;
 
   &:disabled {
     background-color: get-color('light-tint');
